--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "YouTube Channel History",
   "version": "0.1.0",
-  "description": "keep track of and search for Youtube channels you have watched",
+  "description": "keep track of and search for Youtube channels you have watched, see the date and time of each watched video",
   "permissions": ["storage", "tabs", "activeTab"],
   "host_permissions": ["https://*.youtube.com/*"],
   "background": {
